--- a/index.html
+++ b/index.html
@@ -15,5 +15,7 @@
   <body>
     <script src="sketch.js"></script>
     <script src="neural_network.js"></script>
+    <script src="matrix.js"></script>
+    <script src="training.js"></script>
   </body>
 </html>
