--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
     <script src="neural_network.js"></script>
     <script src="matrix.js"></script>
     <script src="training.js"></script>
+    <script src="UI/canvas.js"></script>
   </body>
 </html>
